--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "compile-hero.disable-compile-files-on-did-save-code": false,
-    "python.pythonPath": "C:\\Users\\Asus\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Users\\Asus\\anaconda3\\envs\\lmt\\python.exe"
 }
